make linter happier